Cleaning up. Signed-off-by: Martin Matysiak <kaktus621@gmail.com>

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -9,7 +9,7 @@
 		"message": "Helper for Google+"
 	},
 	"mnu_upload_to_drive": {
-		"message": "upload to drive"
+		"message": "Upload to Drive"
 	},
 	"default_title": {
 		"message": "Helper for Google+"
