Moving some stuff around. Adding error notifications. Signed-off-by: Martin Matysiak <kaktus621@gmail.com>

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -16,5 +16,14 @@
 	},
 	"popup_refresh": {
 		"message": "Refresh"
+	},
+	"upload_success": {
+		"message": "File stored on your Drive!"
+	},
+	"upload_noperm": {
+		"message": "File stored on your Drive"
+	},
+	"upload_failed": {
+		"message": "File could not be stored on your drive."
 	}
 }
