Adding click handler for notifications. Signed-off-by: Martin Matysiak <kaktus621@gmail.com>

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -20,6 +20,9 @@
 	"upload_success": {
 		"message": "File stored on your Drive!"
 	},
+	"upload_open": {
+		"message": "Click to open"
+	},
 	"upload_noperm": {
 		"message": "File stored on your Drive"
 	},
