Adding some more i18n.

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -16,5 +16,11 @@
 	},
 	"upload_failed": {
 		"message": "File could not be stored."
+	},
+	"desc_source": {
+		"message": "Source"
+	},
+	"desc_parent": {
+		"message": "Seen on"
 	}
 }
