Renaming application to 'StoreToDrive'

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
 	"ext_name": {
-		"message": "ChromeToDrive"
+		"message": "StoreToDrive"
 	},
 	"ext_description": {
 		"message": "Send files from Chrome directly to your Google Drive™!"
